--- a/dataflow/requirements.txt
+++ b/dataflow/requirements.txt
@@ -1,7 +1,7 @@
-apache-beam[gcp]
-google-cloud-firestore
-google-cloud-pubsub
-psycopg2-binary
-geopy
-python-dotenv
-google-cloud-secret-manager
+apache-beam[gcp]==2.54.0
+google-cloud-firestore==2.14.0
+google-cloud-pubsub==2.19.0
+psycopg2-binary==2.9.9
+geopy==2.4.1
+python-dotenv==1.0.1
+google-cloud-secret-manager==2.17.0
